--- a/index.html
+++ b/index.html
@@ -2,28 +2,49 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>najjjj | Naz’ın Mimarlık Günlüğü</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>najjjj | Mimarlık Günlüğüm</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>najjjj</h1>
-        <nav>
-            <a href="index.html">Ana Sayfa</a>
-            <a href="blog.html">Blog</a>
-            <a href="bilgi.html">Bilgiler</a>
-            <a href="portfolyo.html">Portfolyo</a>
-            <a href="about.html">Hakkımda</a>
-            <a href="contact.html">İletişim</a>
-        </nav>
-    </header>
-    <main>
-        <h2>✨ Merhaba, ben Naz!</h2>
-        <p>Mimarlık öğrencisiyim. Bu site hem blogum, hem bilgi arşivim hem de portfolyom. Haydi keşfet!</p>
-    </main>
-    <footer>
-        <p>© 2025 najjjj</p>
-    </footer>
+  <header>
+    <div class="logo">najjjj</div>
+    <nav>
+      <a href="#">Ana Sayfa</a>
+      <a href="#">Blog</a>
+      <a href="#">Bilgiler</a>
+      <a href="#">Portfolyo</a>
+      <a href="#">Hakkımda</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h1>Merhaba, ben Naz 🌿</h1>
+      <p>Mimarlık öğrencisiyim. Bu site blogum, bilgi köşem ve portfolyom. İlham dolu bir yolculuğa hoş geldin!</p>
+    </section>
+
+    <section class="cards">
+      <div class="card">
+        <h2>📚 Blog Yazıları</h2>
+        <p>Mimarlıkla ilgili yazılarımı ve ilham kaynaklarımı burada bulabilirsin.</p>
+        <a href="#">Daha Fazla</a>
+      </div>
+      <div class="card">
+        <h2>🧠 Bilgi Köşesi</h2>
+        <p>Yapı malzemeleri, detaylar ve mimarlık kuramları hakkında notlarım burada.</p>
+        <a href="#">Keşfet</a>
+      </div>
+      <div class="card">
+        <h2>🎨 Portfolyo</h2>
+        <p>Projelerimi ve paftalarımı buradan inceleyebilirsin.</p>
+        <a href="#">Göz At</a>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 najjjj | tasarım & mimarlık & ilham</p>
+  </footer>
 </body>
 </html>
