--- a/index.html
+++ b/index.html
@@ -3,51 +3,18 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>NAJJJJ Menü</title>
-  <style>
-    body {
-      background-color: #ede9fe;
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-      padding: 30px;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    .social {
-      margin-top: 30px;
-    }
-    .social a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #4c1d95;
-      font-weight: bold;
-    }
-    .social a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>NAJJJJ – Butonlarım</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>NAZ ABAŞ – Interaktif Menü</h1>
-  <img src="assets/naz-abas-menu.png" usemap="#menumap" alt="Ana Menü Görseli" />
-
-  <map name="menumap">
-    <area shape="rect" coords="880,60,1360,130" href="about.html" alt="Hakkımda">
-    <area shape="rect" coords="880,130,1360,200" href="portfolyo.html" alt="Portfolyo">
-    <area shape="rect" coords="880,200,1360,270" href="bilgi.html" alt="Mimarlık">
-    <area shape="rect" coords="880,270,1360,340" href="blog.html" alt="Blog">
-    <area shape="rect" coords="880,340,1360,410" href="feedback.html" alt="Geri Bildirim">
-    <area shape="rect" coords="880,410,1360,480" href="contact.html" alt="Bana Ulaş">
-  </map>
-
-  <div class="social">
-    <a href="https://instagram.com" target="_blank">Instagram</a>
-    <a href="https://youtube.com" target="_blank">YouTube</a>
-    <a href="https://facebook.com" target="_blank">Facebook</a>
+  <h1>NAZ'IN DÜNYASI ✨</h1>
+  <p>Aşağıdaki butonlarla bana ulaşabilir, projelerime göz atabilirsin!</p>
+  <div class="buttons">
+    <a class="button" href="about.html">Hakkımda</a>
+    <a class="button" href="portfolyo.html">Portfolyo</a>
+    <a class="button" href="mailto:nazabas49@gmail.com">Mail Gönder</a>
+    <a class="button" href="https://www.instagram.com/naz.abassu/" target="_blank">📷 Instagram</a>
+    <a class="button" href="https://www.linkedin.com/feed/?trk=sem-ga_campid.19331681909_asid.168715020864_crid.698313460548_kw.linkedin_d.c_tid.kwd-148086543_n.g_mt.e_geo.1012791" target="_blank">💼 LinkedIn</a>
   </div>
 </body>
 </html>
