--- a/portfolyo.html
+++ b/portfolyo.html
@@ -1,1 +1,30 @@
-<h1>Portfolyo</h1><p>Projelerimi burada paylaşacağım!</p>
+
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolyo | NAJJJJ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>🎨 Portfolyo</h1>
+  <p>İşte projelerimden bazıları:</p>
+  <div class="gallery">
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200.png?text=Proje+1" alt="Proje 1">
+      <h3>Çocuk Odaklı Atölye</h3>
+      <p>Katılımcı oyun alanı ile planlanan araştırma merkezi.</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200.png?text=Proje+2" alt="Proje 2">
+      <h3>Modüler Mekân</h3>
+      <p>Yığılabilir, dönüştürülebilir alan tasarımı.</p>
+    </div>
+    <div class="card">
+      <img src="https://via.placeholder.com/300x200.png?text=Proje+3" alt="Proje 3">
+      <h3>Kamusal Etkileşim</h3>
+      <p>Açık atölyeler ve kentsel oyuncu alanları.</p>
+    </div>
+  </div>
+</body>
+</html>
