--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
-<h1>İletişim</h1><p>Mail: naz@example.com</p>
+
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <title>İletişim | NAJJJJ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>📩 Bana Ulaş</h1>
+    <p>Görüş, öneri veya projelerin için bana mesaj bırakabilirsin 💚</p>
+    <form action="mailto:nazabas49@gmail.com" method="post" enctype="text/plain">
+      <label for="name">Adınız:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">E-posta:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Mesajınız:</label>
+      <textarea id="message" name="message" rows="6" required></textarea>
+
+      <button type="submit">Gönder</button>
+    </form>
+  </div>
+</body>
+</html>
